# Kaggle

./: Titanic v2.Rmd  Titanic_v2.html
House_Prices/: .gitignore  Makefile  README.md  pyproject.toml
House_Prices/input/src/: setup.py
House_Prices/input/src/house_prices/: paths.py
